Remove all custom docking. Now using library